--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   go-helloworld:
-    image: mjah/helloworld
+    image: sarathi850/helloworld
     build: .
     ports:
       - 9094:9094
