--- a/kubernetes-manifest.yaml
+++ b/kubernetes-manifest.yaml
@@ -35,7 +35,7 @@ spec:
       - name: helloworld
         ports:
         - containerPort: 9094
-        image: sarathi850/helloworld
+        image: sarathi850/helloworld:${env.BUILD_NUMBER}
         imagePullPolicy: IfNotPresent
         resources:
           limits:
